--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,10 @@
   border-bottom: 1px solid #ddd;
 }
 
+.to-do-list p{
+  text-align: center;
+}
+
 .to-do-list li .text {
   flex: 1;
 }
@@ -126,4 +130,73 @@
 .to-do-list li .cancel-button:hover {
   background-color: #d32f2f;
 }
+
+/* Estilo para a página de identificação */
+.identification {
+  max-width: 400px;
+  margin: 0 auto; /* Centraliza o contêiner na página */
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  background-color: #f9f9f9;
+  text-align: center; /* Centraliza o texto e os elementos dentro do contêiner */
+}
+
+.identification h1 {
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.identification input {
+  width: 100%; /* Faz o input ocupar toda a largura do contêiner */
+  max-width: 300px; /* Define uma largura máxima para evitar que o input fique muito largo */
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 14px;
+  margin-bottom: 10px; /* Espaço entre o input e o botão */
+  box-sizing: border-box; /* Inclui padding e bordas na largura total */
+}
+
+.submit-buttons {
+  width: 100%; /* Faz o botão ocupar toda a largura do contêiner */
+  max-width: 300px; /* Define uma largura máxima para o botão */
+  padding: 8px 12px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px; /* Ajusta o tamanho da fonte do botão */
+  box-sizing: border-box; /* Inclui padding e bordas na largura total */
+}
+
+.submit-buttons:hover {
+  background-color: #45a049;
+}
+
+.error {
+  color: red;
+  margin-top: 10px; /* Espaço acima do texto de erro */
+}
+
+/* Estilo para o campo de input com erro */
+.error-input {
+  border: 2px solid red;
+  animation: blink-border 0.5s linear;
+}
+
+@keyframes blink-border {
+  0% { border-color: red; }
+  50% { border-color: transparent; }
+  100% { border-color: red; }
+}
+
+/* Estilo para a mensagem de erro */
+.error-message {
+  color: red;
+  font-size: 12px;
+  margin-top: 5px;
+}
+
 
