--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 8px;
-  background-color: #f9f9f9;
+  background-color: #ececec;
+  margin-top: 200px;
 }
 
 .to-do-list h1 {
@@ -131,6 +132,28 @@
   background-color: #d32f2f;
 }
 
+
+.logout-button {
+  display: block; /* Garante que o botão se comporte como um bloco */
+  margin: 0 auto; /* Centraliza horizontalmente com margem automática */
+  width: 100%;
+  max-width: 80px;
+  padding: 8px 12px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  align-items: center;
+  animation: blink-border 0.5s linear;
+}
+
+
+.logout-button:hover {
+  background-color: #45a049;
+}
+
 /* Estilo para a página de identificação */
 .identification {
   max-width: 400px;
@@ -138,8 +161,9 @@
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 8px;
-  background-color: #f9f9f9;
+  background-color: #ececec;
   text-align: center; /* Centraliza o texto e os elementos dentro do contêiner */
+  margin-top: 200px;
 }
 
 .identification h1 {
@@ -194,4 +218,14 @@
   0% { border-color: red; }
   50% { border-color: transparent; }
   100% { border-color: red; }
+}
+
+.search-input {
+  width: 100%;
+  max-width: 200px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 14px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
 }
